# knok-mnist-training

./: Cargo.toml  README.md  build.rs  flake.nix
src/: data.rs  lib.rs  main.rs  sgd.rs
