[package]
name = "knok-mnist-training"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eframe = "0.35.0"
flate2 = "1.0"
knok = { git = "https://github.com/gmmyung/knok", branch = "random-static-runtime" }
ureq = "2.12"

[build-dependencies]
knok-build = { git = "https://github.com/gmmyung/knok", branch = "random-static-runtime" }
